0.4.0
- orm
    - major interface pare-down for Query:  all selectXXX methods
      are deprecated.  generative methods are now the standard
      way to do things, i.e. filter(), filter_by(), all(), one(),
      etc.  Deprecated methods are docstring'ed with their 
      new replacements.
    - query.list() replaced with query.all()
    - removed ancient query.select_by_attributename() capability.
    - added "aliased joins" positional argument to the front of 
      filter_by(). this allows auto-creation of joins that are aliased
      locally to the individual filter_by() call.  This allows the 
      auto-construction of joins which cross the same paths but
      are querying divergent criteria.
    - along with recent speedups to ResultProxy, total number of
      function calls significantly reduced for large loads.
      test/perf/masseagerload.py reports 0.4 as having the fewest number
      of function calls across all SA versions (0.1, 0.2, and 0.3)
    - secondary inheritance loading: polymorphic mappers can be
      constructed *without* a select_table argument. inheriting mappers
      whose tables were not represented in the initial load will issue a
      second SQL query immediately, once per instance (i.e. not very
      efficient for large lists), in order to load the remaining
      columns.
    - secondary inheritance loading can also move its second query into
      a column- level "deferred" load, via the "polymorphic_fetch"
      argument, which can be set to 'select' or 'deferred'
    - added undefer_group() MapperOption, sets a set of "deferred"
      columns joined by a "group" to load as "undeferred".
- sql
  - result.last_inserted_ids() should return a list that is identically
    sized to the primary key constraint of the table.  values that were 
    "passively" created and not available via cursor.lastrowid will be None.
  - result sets from CRUD operations close their underlying cursor immediately.