@@ -10,3 +10,19 @@ from sqlalchemy.schema import *
 
 from sqlalchemy.engine import create_engine
 
+def __figure_version():
+    try:
+        from pkg_resources import require
+        import os
+        # NOTE: this only works when the package is either installed,
+        # or has an .egg-info directory present (i.e. wont work with raw SVN checkout)
+        info = require('sqlalchemy')[0]
+        if os.path.dirname(os.path.dirname(__file__)) == info.location:
+            return info.version
+        else:
+            return '(not installed)'
+    except:
+        return '(not installed)'
+        
+__version__ = __figure_version()
+    
